--- a/backend/trip-service/tripservice/tripservice/src/main/resources/application.yml
+++ b/backend/trip-service/tripservice/tripservice/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
         hbm2ddl.create_namespaces: true
 
   mail:
-    host: smtp.gmail.com
+    host: smtp.resend.com
     port: 587
     username: ${SMTP_USERNAME}
     password: ${SMTP_PASSWORD}
