--- a/backend/auth-service/authservice/authservice/src/main/resources/application.yml
+++ b/backend/auth-service/authservice/authservice/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
   application:
    name: authservice
   mail:
-    host: smtp.render.com
+    host: smtp.resend.com
     port: 587
     username: ${SMTP_USERNAME}
     password: ${SMTP_PASSWORD}
