--- a/backend/trip-service/tripservice/tripservice/src/main/resources/application.yml
+++ b/backend/trip-service/tripservice/tripservice/src/main/resources/application.yml
@@ -25,12 +25,11 @@ spring:
   mail:
     host: smtp.resend.com
     port: 587
-    username: ${SMTP_USERNAME}
-    password: ${SMTP_PASSWORD}
+    username: apikey
+    password: ${RESEND_API_KEY}
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
-      mail.smtp.starttls.required: true
       
 
 geoapify:
