--- a/backend/auth-service/authservice/authservice/src/main/resources/application.yml
+++ b/backend/auth-service/authservice/authservice/src/main/resources/application.yml
@@ -21,15 +21,19 @@ spring:
   
   application:
    name: authservice
-  mail:
-    host: smtp.resend.com
-    port: 587
-    username: apikey
-    password: ${RESEND_API_KEY}
-    properties:
-      mail.smtp.auth: true
-      mail.smtp.starttls.enable: true
+#  mail:
+#    host: smtp.resend.com
+#    port: 587
+#    username: apikey
+#    password: ${RESEND_API_KEY}
+#    properties:
+#      mail.smtp.auth: true
+#      mail.smtp.starttls.enable: true
 
 jwt:
   secret: ${JWT_SECRET}
   expiration: 86400000
+
+resend:
+  api-key: ${RESEND_API_KEY}
+  from-email: ${RESEND_FROM_EMAIL}
