--- a/backend/auth-service/authservice/authservice/src/main/resources/application.yml
+++ b/backend/auth-service/authservice/authservice/src/main/resources/application.yml
@@ -21,19 +21,17 @@ spring:
   
   application:
    name: authservice
-#  mail:
-#    host: smtp.resend.com
-#    port: 587
-#    username: apikey
-#    password: ${RESEND_API_KEY}
-#    properties:
-#      mail.smtp.auth: true
-#      mail.smtp.starttls.enable: true
+  mail:
+    host: smtp.resend.com
+    port: 587
+    username: ${SMTP_USERNAME}
+    password: ${SMTP_PASSWORD}
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+      mail.smtp.starttls.required: true
 
 jwt:
   secret: ${JWT_SECRET}
   expiration: 86400000
 
-resend:
-  api-key: ${RESEND_API_KEY}
-  from-email: ${RESEND_FROM_EMAIL}
