--- a/backend/auth-service/authservice/authservice/src/main/resources/application.yml
+++ b/backend/auth-service/authservice/authservice/src/main/resources/application.yml
@@ -22,10 +22,10 @@ spring:
   application:
    name: authservice
   mail:
-    host: smtp.resend.com
+    host: smtp-relay.brevo.com
     port: 587
-    username: ${SMTP_USERNAME}
-    password: ${SMTP_PASSWORD}
+    username: ${BREVO_USERNAME}
+    password: ${BREVO_PASSWORD}
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
