--- a/backend/trip-service/tripservice/tripservice/pom.xml
+++ b/backend/trip-service/tripservice/tripservice/pom.xml
@@ -75,10 +75,10 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <!-- ✅ Spring Boot Starter Mail for Email Support -->
-		<dependency>
+		<!--dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
+		</dependency-->
 		
 		<!-- ✅ Jakarta Mail (needed for javax.mail / jakarta.mail classes) -->
 		<dependency>
@@ -100,7 +100,11 @@
 		  <version>1.18.30</version>
 		  <scope>provided</scope>
 		</dependency>
-
+		<dependency>
+		    <groupId>com.sendgrid</groupId>
+		    <artifactId>sendgrid-java</artifactId>
+		    <version>4.10.1</version>
+		</dependency>
     </dependencies>
 
 	<build>
