--- a/backend/trip-service/tripservice/tripservice/pom.xml
+++ b/backend/trip-service/tripservice/tripservice/pom.xml
@@ -75,10 +75,10 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <!-- ✅ Spring Boot Starter Mail for Email Support -->
-		<!--dependency>
+		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-mail</artifactId>
-		</dependency-->
+		</dependency>
 		
 		<!-- ✅ Jakarta Mail (needed for javax.mail / jakarta.mail classes) -->
 		<dependency>
